tests/ui/inline-const/const-expr-generic-err.stderr
error[E0080]: evaluation of `foo::<i32>::{constant#0}` failed
  --> $DIR/const-expr-generic-err.rs:5:13
   |
LL |     const { assert!(std::mem::size_of::<T>() == 0); }
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'assertion failed: std::mem::size_of::<T>() == 0', $DIR/const-expr-generic-err.rs:5:13
   |
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn foo::<i32>`
  --> $DIR/const-expr-generic-err.rs:13:5
   |
LL |     foo::<i32>();
   |     ^^^^^^^^^^^^

error[E0080]: evaluation of `bar::<0>::{constant#0}` failed
  --> $DIR/const-expr-generic-err.rs:9:13
   |
LL |     const { N - 1 }
   |             ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow

note: the above error was encountered while instantiating `fn bar::<0>`
  --> $DIR/const-expr-generic-err.rs:14:5
   |
LL |     bar::<0>();
   |     ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
